# dthboost

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  helper-contract.md  index.html  package-lock.json  package.json  write_temp.js
docs/: index.html  security.html  validate.html
landing/: index.html  option1-3d.html  option2-video.html  option3-monitor.html
src/: App.css  App.tsx  data.ts  engine.ts  engineBridge.ts  helper-contract.schema.json  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BenchmarkHistory.tsx  BenchmarkPanel.tsx  BoostProgress.tsx  DiagnosisCenter.tsx  EmptyState.tsx  ErrorBoundary.tsx  FrameTimeChart.tsx  GameReadyCard.tsx  HeroPanel.tsx  InfoPanels.tsx  OnboardingWizard.tsx  ReceiptDrawer.tsx  RecommendationsPanel.tsx  SessionBoostPanel.tsx  Sidebar.tsx  SignalStrip.tsx  Sounds.ts  StatusBar.tsx  Toast.tsx  Tooltip.tsx  TopBar.tsx  types.ts
src/pages/: BenchmarkPage.tsx  DashboardPage.tsx  GamesPage.tsx  NetworkPage.tsx  OptimizePage.tsx  ReportsPage.tsx  SafetyPage.tsx  SessionBoostPage.tsx  SettingsPage.tsx  TweaksPage.tsx
